# RabbitVNC

./: .gitignore  .travis.yml  BUILDING.txt  CMakeLists.txt  Dockerfile  README.md  appveyor.yml  circle.yml  vcpkg.json
ci/: build-before.sh  build-depends.sh  build.sh
cmake/: RabbitVNCConfig.cmake.in  Toolchain-cross-mingw32-linux.cmake
cmake/Modules/: RabbitVNCConfig.cmake.in
common/: CMakeLists.txt
common/Xregion/: CMakeLists.txt
common/network/: CMakeLists.txt  Socket.cxx  TcpSocket.cxx  TcpSocket.h
common/os/: CMakeLists.txt  Mutex.cxx  Thread.cxx  os.cxx  os.h  w32tiger.cxx  w32tiger.h
common/rdr/: BufferedInStream.h  BufferedOutStream.h  CMakeLists.txt  FdInStream.cxx  FdOutStream.cxx  FdOutStream.h  FileInStream.cxx  HexInStream.cxx  HexOutStream.cxx  RandomStream.cxx  RandomStream.h  ZlibInStream.cxx
common/rfb/: Blacklist.cxx  CConnection.cxx  CConnection.h  CMakeLists.txt  CMsgHandler.cxx  CMsgReader.cxx  CMsgReader.h  CMsgWriter.cxx  CMsgWriter.h  CSecurity.h  CSecurityDH.cxx  CSecurityMSLogonII.cxx  CSecurityPlain.cxx  CSecurityPlain.h  CSecurityRSAAES.cxx  CSecurityStack.cxx  CSecurityTLS.cxx  CSecurityTLS.h  CSecurityVeNCrypt.cxx  CSecurityVncAuth.cxx  CSecurityVncAuth.h  ClientParams.cxx  ComparingUpdateTracker.cxx  Configuration.cxx  Congestion.cxx  CopyRectDecoder.cxx  Cursor.cxx  DecodeManager.cxx  Decoder.cxx  EncodeManager.cxx  Encoder.cxx  HextileDecoder.cxx  HextileEncoder.cxx  JpegCompressor.cxx  JpegDecompressor.cxx  KeyRemapper.cxx  KeysymStr.c  LogWriter.cxx  LogWriter.h  Logger.cxx  (+46 more)
common/zlib/: CMakeLists.txt  zconf.h
docs/: INSTALL.md  RabbitVnc.xmi
docs/zh_CN/: 开发文档.md
po/: CMakeLists.txt
tests/perf/: CMakeLists.txt  decperf.cxx  encperf.cxx
tests/unit/: CMakeLists.txt
travis/: build-before.sh  build.sh  install-build-depends.sh
unix/: CMakeLists.txt
unix/tx/: CMakeLists.txt  TXImage.cxx
unix/vncconfig/: CMakeLists.txt
unix/vncpasswd/: CMakeLists.txt
unix/vncserver/: CMakeLists.txt
unix/vncviewer/: CMakeLists.txt
unix/x0vncserver/: CMakeLists.txt  Image.cxx  x0vncserver.cxx
vncviewer/: CConn.cxx  CConn.h  CMakeLists.txt  DesktopWindow.cxx  DesktopWindow.h  MonitorArrangement.cxx  MonitorIndicesParameter.cxx  Surface_X11.cxx  Viewport.cxx  Viewport.h  parameters.cxx  touch.cxx  vncviewer.cxx  vncviewer.rc.in
win/: CMakeLists.txt
win/rfb_win32/: CKeyboard.h  CMakeLists.txt  CleanDesktop.cxx  DeviceFrameBuffer.cxx  DynamicFn.cxx  MonitorInfo.cxx  MsgBox.h  RegConfig.cxx  Registry.cxx  SDisplay.cxx  SDisplayCorePolling.cxx  Security.cxx  Service.cxx  Threading.h  Win32Util.cxx
win/vncconfig/: CMakeLists.txt  Connections.h  Desktop.h  Legacy.cxx  vncconfig.rc
win/vncviewer/: CConn.cxx  CMakeLists.txt  ListenServer.h
win/winvnc/: CMakeLists.txt  JavaViewer.cxx  ManagedListener.h  STrayIcon.cxx  VNCServerWin32.cxx  VNCServerWin32.h  winvnc.rc
win/wm_hooks/: CMakeLists.txt  wm_hooks.cxx
