set(NETWORK_SOURCES
    ${CMAKE_CURRENT_SOURCE_DIR}/Socket.cxx
    ${CMAKE_CURRENT_SOURCE_DIR}/TcpSocket.cxx)

set(NETWORK_HEADS
    ${CMAKE_CURRENT_SOURCE_DIR}/Socket.h
    ${CMAKE_CURRENT_SOURCE_DIR}/TcpSocket.h)

if(NOT WIN32)
    set(NETWORK_SOURCES ${NETWORK_SOURCES} ${CMAKE_CURRENT_SOURCE_DIR}/UnixSocket.cxx)
    set(NETWORK_HEADS ${NETWORK_HEADS} ${CMAKE_CURRENT_SOURCE_DIR}/UnixSocket.h)
endif()

set(RabbitVNC_SOURCES ${RabbitVNC_SOURCES}
    ${NETWORK_SOURCES}
    PARENT_SCOPE)

set(RabbitVNC_HEADS ${RabbitVNC_HEADS}
    ${NETWORK_HEADS}
    PARENT_SCOPE)

if(WIN32)
    set(RabbitVNC_LIBS ${RabbitVNC_LIBS}
        ws2_32
        PARENT_SCOPE)
endif()

INSTALL(FILES ${NETWORK_HEADS}
    DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/${PROJECT_NAME}/network
    )
